Removing more old code

--- a/foundry.toml
+++ b/foundry.toml
@@ -9,7 +9,7 @@ src = 'packages/contracts/src'
 test = 'packages/contracts/test'
 out = 'packages/contracts/out'
 cache_path = 'packages/contracts/cache'
-libs = ['packages/contracts/lib']
+libs = ["packages/contracts/lib", "lib"]
 verbosity = 2
 bytecode_hash = 'none'
 solc_version = '0.8.13'
