--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,11 @@
   "search.exclude": {
     "packages/contracts/lib": true
   },
-  "solidity.compileUsingRemoteVersion": "v0.8.15+commit.e14f2714"
+  "solidity.compileUsingRemoteVersion": "v0.8.15+commit.e14f2714",
+  "[dotenv]": {
+    "editor.defaultFormatter": "foxundermoon.shell-format"
+  },
+  "[shellscript]": {
+    "editor.defaultFormatter": "foxundermoon.shell-format"
+  }
 }
