--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -6,11 +6,10 @@
     "pnpm": "7"
   },
   "scripts": {
-    "dev": "next dev & graphql-codegen --watch",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "codegen": "graphql-codegen",
     "prettier": "prettier --write src"
   },
   "dependencies": {
@@ -26,15 +25,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-toastify": "^9.0.4",
-    "urql": "^2.0.6",
     "wagmi": "^0.5.5",
     "zustand": "^3.6.7"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.3.1",
-    "@graphql-codegen/typescript": "^2.4.2",
-    "@graphql-codegen/typescript-operations": "^2.2.2",
-    "@graphql-codegen/typescript-urql": "^3.4.2",
     "@types/node": "17.0.0",
     "@types/react": "17.0.37",
     "autoprefixer": "^10.4.0",
