--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -25,6 +25,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-toastify": "^9.0.4",
+    "sharp": "^0.30.7",
     "wagmi": "^0.5.5",
     "zustand": "^3.6.7"
   },
